# playground

./: .gitignore  README.md
aider/: shell.nix
barebone-nodejs/: package.json  pnpm-lock.yaml  question-1-1.ts  question-1-2.md  question-1-2.ts  question-2-1.md  question-2-2.md  question-3-1.ts  script.sh
barebone-nodejs-3/: exercise-1-1.ts  exercise-1-2.md  exercise-1-3.ts  exercise-2-1.md  exercise-2-2.md  exercise-3-1.ts  package.json  pnpm-lock.yaml  script.js  script.sh  worker.js
chat-svelte-xstate-websocket/: package.json  pnpm-lock.yaml
crypta-machina/: index.ts  logging.ts  package.json  persistence.ts  script.sh  tsconfig.json
crypta-v2/: biome.json  drizzle.config.ts  package-lock.json  package.json
finance-engineering/: README.md  american_option.py  delta_hedging_1.py  hello.py  monte_carlo.py  option_calculation.py  pyproject.toml  scratch.py
golfp/: go.mod  main.go
harm-stack-template/: .gitignore  Cargo.toml  README.md  shell.nix  tailwind.config.js
harm-stack-template/migrations/2025-02-06-133159_table_todo_create/: up.sql
harm-stack-template/src/: db.rs  err.rs  main.rs  schema.rs  templates.rs
harm-stack-template/static/: styles.css
kvs/: .gitignore  Cargo.toml  README.md  bacon.toml  log.json  script.sh  shell.nix
kvs/benches/: kv_store.rs
kvs/src/: app_state.rs  engine.rs  err.rs  kv_store.rs  lib.rs  mem_store.rs  server.rs  sled_store.rs  store.rs  thread_pool.rs
kvs/tests/: kv_store.rs  tests_1.rs
learn-tlaplus/: README.md  scratch.old  scratch.tla
math/: all-in-one-cheat-sheet.typ  derivations.typ  limits.typ
scribbles/: astro.config.mjs  package.json  pnpm-lock.yaml
seven-guis-htmx-axum-rust-maud/: .gitignore  .sample.env  Cargo.toml  README.md  diesel.toml  shell.nix
seven-guis-rust-hypertext-htmx/: Cargo.toml
seven-guis-rust-maud-htmx/: Cargo.toml  output.css
seven-guis-solidjs-astro/: package.json  pnpm-lock.yaml
seven-guis-svelte-5-xstate/: package.json
seven-guis-svelte-convex/: biome.json  package.json  pnpm-lock.yaml
seven-guis-svelte-shadcn/: biome.json  package.json  pnpm-lock.yaml
seven-guis-svelte-xstate/: package.json
(+145 files in other folders)
