[package]
name = "harm-stack-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
maud = { version = "0.27.0", features = ["axum", "axum-core"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
