[package]
name = "kvs"
version = "0.1.0"
authors = ["Thanh Nguyen <thanhnguyen2187@gmail.com>"]
description = "A simple key-value store"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/bin/main.rs"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
