[package]
name = "kvs"
version = "0.2.0"
authors = ["Thanh Nguyen <thanhnguyen2187@gmail.com>"]
description = "A simple key-value store"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/bin/main.rs"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
snafu = "0.8.5"
tempfile = "3.14.0"
walkdir = "2.5.0"
csv = "1.3.1"
