[package]
name = "kvs"
version = "0.3.0"
authors = ["Thanh Nguyen <thanhnguyen2187@gmail.com>"]
description = "A simple key-value store"
edition = "2021"

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/client.rs"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
snafu = "0.8.5"
tempfile = "3.14.0"
walkdir = "2.5.0"
csv = "1.3.1"
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
log = { version = "0.4.22" }
env_logger = "0.11.6"
sled = "0.34.7"
reqwest = "0.12.12"
criterion = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "kv_store"
harness = false
